Issue #13035 - Default Widget: Blog Archive (#13163)
* Issue #13040 - View related changes for Filter By Year widget.

* Issue #13040 - Viewfield module and block content type.

* Issue #13040 - Aggregation issue fix.

* Issue #13040 - Finally a setting that aggregates correctly.

* Issue #13105 - 13105-support-default-content-new-vsites

* Issue #13105 - adds-default-content-dir

* Issue #13105 - adds support for default blocks

* Issue #13105 - code cleaup

* Issue #13040 - Block edit delete permissions

* Issue #13040 - Widget csv added

* Issue #13105 - changes in getCreateFilePaths

* Issue #13040 - Tests for everything.

* Issue #13040 - Comment correction.

* Issue #13040 - Test fix.

* Issue #13042 - People glossary page and query alter.

* Issue #13040 - PR feedback changes.

* Issue #13040 - Changes to hide the widget.

* Issue #13042 - Custom html widget for alphabetical listing.

* Issue #13042 - Custom html format to display html correctly.

* Issue #13042 - Kernel and functional tests.

* Issue #13035 - WIP Blog archive views sql module for granular aggregation on created date.

* Issue #13035 - Tests.

* Issue #13035 - Add new group to functional tests.

* Issue #13035 - Composer update.

Co-authored-by: uttkarsh@axelerant.com <uttkarsh@axelerant.com>
Co-authored-by: Lomas Rishi Gupta <lomasgupta35@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ jobs:
     - stage: test
       script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
     - stage: test
-      script: robo job:run-functional-tests "os-search,analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
+      script: robo job:run-functional-tests "os-search,analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import,vsite-preset"
     - stage: test
       script: robo job:run-functional-javascript-tests "publications,mailchimp,metatag,redirect,cp-appearance,vsite-preset,news"
     - stage: test
