--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -191,6 +191,7 @@ module:
   viewfield: 0
   views_accordion: 0
   views_advanced_routing: 0
+  views_date_format_sql: 0
   views_ical: 0
   views_infinite_scroll: 0
   views_ui: 0
