--- a/config/sync/core.entity_form_display.block_content.faceted_taxonomy.default.yml
+++ b/config/sync/core.entity_form_display.block_content.faceted_taxonomy.default.yml
@@ -17,7 +17,8 @@ dependencies:
 third_party_settings:
   field_layout:
     id: layout_onecol
-    settings: {  }
+    settings:
+      label: ''
 id: block_content.faceted_taxonomy.default
 targetEntityType: block_content
 bundle: faceted_taxonomy
