--- a/config/sync/views.view.people.yml
+++ b/config/sync/views.view.people.yml
@@ -499,6 +499,8 @@ display:
           id: status
           expose:
             operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
           group: 1
         type:
           id: type
@@ -509,6 +511,9 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+          expose:
+            operator_limit_selection: false
+            operator_list: {  }
         current_vsite_filter:
           id: current_vsite_filter
           table: group_content
@@ -532,6 +537,8 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
