--- a/config/sync/core.entity_form_display.media.image.slideshow.yml
+++ b/config/sync/core.entity_form_display.media.image.slideshow.yml
@@ -16,7 +16,8 @@ dependencies:
 third_party_settings:
   field_layout:
     id: layout_onecol
-    settings: {  }
+    settings:
+      label: ''
 id: media.image.slideshow
 targetEntityType: media
 bundle: image
