--- a/config/sync/paragraphs.paragraphs_type.class_material.yml
+++ b/config/sync/paragraphs.paragraphs_type.class_material.yml
@@ -5,5 +5,6 @@ dependencies: {  }
 id: class_material
 label: 'Class Material'
 icon_uuid: null
+icon_default: null
 description: ''
 behavior_plugins: {  }
