--- a/config/sync/paragraphs.paragraphs_type.follow_me_links.yml
+++ b/config/sync/paragraphs.paragraphs_type.follow_me_links.yml
@@ -5,5 +5,6 @@ dependencies: {  }
 id: follow_me_links
 label: 'follow me links'
 icon_uuid: null
+icon_default: null
 description: ''
 behavior_plugins: {  }
