--- a/profile/modules/apps/os_widgets/os_widgets.services.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.services.yml
@@ -7,7 +7,7 @@ services:
   os_widgets.block.repository:
     class: Drupal\os_widgets\OsWidgetsBlockRepository
     decorates: block.repository
-    arguments: ['@os_widgets.block.repository.inner', '@entity_type.manager', '@theme.manager', '@vsite.context_manager', '@request_stack']
+    arguments: ['@os_widgets.block.repository.inner', '@entity_type.manager', '@theme.manager', '@vsite.context_manager', '@request_stack', '@hierarchical.storage']
   os_widgets.block_place.event_subscriber:
     class: Drupal\os_widgets\EventSubscriber\BlockPlaceEventSubscriber
     arguments: ['@request_stack', '@current_user', '@vsite.context_manager']
