Issue #13022 - Global Menu  Settings issues (#13170)
* Issue #13022 - Global Menu  Settings issues

* Issue #13022 - Global Menu  Settings issues - Dataverse Link

* Issue #13022 - Global Menu  Settings issues - Dataverse Link

* Issue #13022 - Global Menu  Settings issues - Custom Domain Link

* Issue #13022 - Global Menu  Settings issues - Dataverse Link

* Issue #13022 - Global Menu  Settings issues - Dataverse Link

* Issue #13022 - Global Menu  Settings issues - Dataverse Link

* Issue #13022 - Global Menu  Settings issues - Dataverse Link

* Issue #13022 - Global Menu  Settings issues - Cache/Reindex, Custom Domain Link

* Issue #13022 - Global Menu  Settings issues - Update permissions for Custom Domain and Cache/Reindex for Support Role

* Issue #13022 - Global Menu  Settings issues - Add assertions for Support User and load storage outside for loop

* Issue #13022 - Global Menu Settings issues - Add assertion for super user

--- a/config/sync/group.role.personal-support_user.yml
+++ b/config/sync/group.role.personal-support_user.yml
@@ -23,6 +23,7 @@ permissions:
   - 'administer group'
   - 'administer members'
   - 'administer nodes'
+  - 'change vsite domain'
   - 'create group_entity:bibcite_reference entity'
   - 'create group_entity:block_content entity'
   - 'create group_entity:media entity'
@@ -79,6 +80,7 @@ permissions:
   - 'manage layout'
   - 'manage taxonomy'
   - 'manage vsite content'
+  - 'manage vsite solr search'
   - manage_menu
   - 'promote nodes'
   - 'publish nodes'
