--- a/config/sync/core.entity_form_display.block_content.slideshow.default.yml
+++ b/config/sync/core.entity_form_display.block_content.slideshow.default.yml
@@ -30,6 +30,7 @@ content:
       rows: 9
       summary_rows: 3
       placeholder: ''
+      show_summary: false
     third_party_settings: {  }
     region: content
   field_slideshow:
@@ -38,18 +39,11 @@ content:
       title: Paragraph
       title_plural: Paragraphs
       edit_mode: closed
-      closed_mode: summary
-      autocollapse: none
-      closed_mode_threshold: 1
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: slideshow
-      features:
-        duplicate: duplicate
-        collapse_edit_all: collapse_edit_all
-        add_above: '0'
     third_party_settings: {  }
-    type: paragraphs
+    type: entity_reference_paragraphs
     region: content
   field_slideshow_layout:
     weight: 6
