--- a/config/sync/core.entity_view_display.block_content.rss_feed.default.yml
+++ b/config/sync/core.entity_view_display.block_content.rss_feed.default.yml
@@ -7,26 +7,14 @@ dependencies:
     - field.field.block_content.rss_feed.field_content_to_display
     - field.field.block_content.rss_feed.field_is_show_all_content
     - field.field.block_content.rss_feed.field_widget_title
-  module:
-    - layout_builder
-third_party_settings:
-  layout_builder:
-    sections: {  }
 id: block_content.rss_feed.default
 targetEntityType: block_content
 bundle: rss_feed
 mode: default
-content:
-  field_widget_title:
-    weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
+content: {  }
 hidden:
   field_content_to_display: true
   field_is_show_all_content: true
+  field_widget_title: true
   langcode: true
   search_api_excerpt: true
