Issue #13066 - Ignore vsite theme activation on preview (#13169)
* Issue #13066 - Ignore vsite theme on preview

* Issue #13066 - WIP: Tests

* Issue #13066 - Preview Test - Unorthodox

Co-authored-by: Ashish Prabhakar <ashish.prabhakar@axelerant.com>

--- a/profile/modules/cp/modules/cp_appearance/cp_appearance.services.yml
+++ b/profile/modules/cp/modules/cp_appearance/cp_appearance.services.yml
@@ -15,7 +15,7 @@ services:
       - { name: event_subscriber }
   cp_appearance.init_custom_theme_subscriber:
     class: \Drupal\cp_appearance\EventSubscriber\InitCustomThemeSubscriber
-    arguments: ['@config.factory', '@theme.manager', '@theme.initialization']
+    arguments: ['@config.factory', '@theme.manager', '@theme.initialization', '@request_stack']
     tags:
       - {name: event_subscriber}
   cp_appearance.css_collection_renderer:
