--- a/config/sync/views.view.people.yml
+++ b/config/sync/views.view.people.yml
@@ -326,6 +326,66 @@ display:
         - 'languages:language_interface'
         - 'user.node_grants:view'
       tags: {  }
+  block_2:
+    display_plugin: block
+    id: block_2
+    display_title: 'Alphabetical Grouping'
+    position: 5
+    display_options:
+      display_extenders:
+        metatag_display_extender: {  }
+      display_description: ''
+      arguments:
+        field_last_name_value:
+          id: field_last_name_value
+          table: node__field_last_name
+          field: field_last_name_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: summary
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          default_argument_skip_url: false
+          summary_options:
+            base_path: people/glossary
+            items_per_page: 25
+            count: false
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: true
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          glossary: true
+          limit: 1
+          case: upper
+          path_case: lower
+          transform_dash: false
+          break_phrase: false
+          plugin_id: string
+      defaults:
+        arguments: false
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - url.query_args
+        - 'user.node_grants:view'
+      tags: {  }
   feed_1:
     display_plugin: feed
     id: feed_1
