Issue #13085 - Edited info files to correct order of libraries. (#13193)

--- a/profile/themes/clean/clean.libraries.yml
+++ b/profile/themes/clean/clean.libraries.yml
@@ -1,6 +1,6 @@
 global-styling:
   version: VERSION
   css:
-    theme:
+    layout:
       '//fonts.googleapis.com/css?family=Roboto': { external: true }
       css/style.css: {}
