--- a/profile/themes/onepage/onepage.libraries.yml
+++ b/profile/themes/onepage/onepage.libraries.yml
@@ -1,7 +1,7 @@
 global-styling:
   version: -1
   css:
-    theme:
+    layout:
       '//fonts.googleapis.com/css?family=Montserrat': { external: true }
       css/style.css: {}
   js:
