Issue #13076 - Fix - Should not show content when Access denied (#13191)
* Issue #13076 - Basic Access Check

* Issue #13076 - Vsite Block Access test

* Issue #13076 - Correct block access tests

Co-authored-by: Ashish Prabhakar <ashish.prabhakar@axelerant.com>

--- a/profile/modules/os/os.services.yml
+++ b/profile/modules/os/os.services.yml
@@ -3,7 +3,7 @@ services:
     class: Drupal\os\OsAngularModuleManager
   os.access_helper:
     class: \Drupal\os\AccessHelper
-    arguments: ['@vsite.context_manager', '@entity_type.manager']
+    arguments: ['@vsite.context_manager', '@entity_type.manager', '@vsite.privacy.manager']
   os.os_route_subscriber:
     class: \Drupal\os\Routing\OsRouteSubscriber
     tags:
