Issue #12674 - Section navigation layout context changes (#13207)
* Issue #12674 - Update layout context on moving sub pages to new book.

* Issue #12674 - Added condition for book node type.

* Issue #12674 - Code changes to update moved pages layout.

* Issue #12674 - BlockVisibilitygroup code added.

* Issue #12674 - Handled ajax redirection and null submission.

* Issue #12674 - Updated tests with latest code changes.

* Issue #12674 - New assertions added.

* Issue #12674 - Added assertions for sub pages.

* Issue #12674 - Removed unused code.

--- a/profile/modules/apps/os_pages/os_pages.services.yml
+++ b/profile/modules/apps/os_pages/os_pages.services.yml
@@ -10,7 +10,7 @@ services:
       - { name: event_subscriber }
   os_pages.books_helper:
     class: Drupal\os_pages\BooksHelper
-    arguments: ['@entity_type.manager', '@os_pages.visibility_helper', '@book.manager']
+    arguments: ['@entity_type.manager', '@os_pages.visibility_helper', '@book.manager', '@path_alias.manager', '@vsite.context_manager', '@os_pages.visibility_storage']
   os_pages.access_checker:
     class: Drupal\os_pages\Access\OutlineAccessCheck
     arguments: ['@vsite.context_manager', '@request_stack']
