Issue #12454 - Widget: Column (#13099)
* Issue #12454 - remove unused dependency

* Issue #12454 - Column widget - init

* Issue #12454 - Debug code

* Issue #12454 - Store widgets inside column

* Issue #12454 - Show layout options while creating column widget

* Issue #12454 - Ability to set layout from vsite admin UI

* Issue #12454 - Fix - Layout not updated when widget edited

* Issue #12454 - Show the selected layout by default

* Issue #12454 - Fix - Site breaks when new column widget is created

* Issue #12454 - POC - render an existing widget inside column

* Issue #12454 - POC - ability to select widget from UI

* Issue #12454 - Render the actual selected widgets

* Issue #12454 - Fix - Multiple selection not working

* Issue #12454 - Validate layout id before updating

This would prevent storing of invalid data.

* Issue #12454 - Make sure that the widget is only used when layout_builder enabled

* Issue #12454 - Only update column layout setting when necessary

* Issue #12454 - Fix - Column render is not updated as per embedded widgets

* Issue #12454 - Remove duplicate conditions

* Issue #12454 - Prevent unnecessary column entity updates

* Issue #12454 - Code refactoring

Move creation of section components inside a helper

* Issue #12454 - layout_builder depdendency

* Revert "Issue #12454 - Debug code"

This reverts commit d9f1929da8a4644b863110f1f752310d7cd2e08c.

* Issue #12454 - Fix - Unable to edit field_widgets settings

* Issue #12454 - Make sure to not show the column itself during selection

This is to avoid recursion.

* Issue #12454 - Fix - Column widget content not getting rendered

* Issue #12454 - Increase test coverage for testcheckBlocksAccess

* Issue #12454 - Test code refactoring

Splitting the scenarios into their own test cases, instead of doing in a
single one.

* Issue #12454 - Better documentation for widgetsToSectionComponents

* Issue #12454 - test widgetsToS

--- a/config/sync/field.field.block_content.accordion.field_widget_collection.yml
+++ b/config/sync/field.field.block_content.accordion.field_widget_collection.yml
@@ -6,10 +6,16 @@ dependencies:
     - block_content.type.accordion
     - block_content.type.addthis
     - block_content.type.basic
+    - block_content.type.column
     - block_content.type.custom_text_html
+    - block_content.type.dataverse_dataset
+    - block_content.type.dataverse_dataset_citation
+    - block_content.type.dataverse_list
+    - block_content.type.dataverse_search_box
     - block_content.type.embed_media
     - block_content.type.featured_posts
     - block_content.type.follow_me
+    - block_content.type.list_of_files
     - block_content.type.list_of_posts
     - block_content.type.mailchimp_subscription
     - block_content.type.media_gallery
@@ -17,10 +23,13 @@ dependencies:
     - block_content.type.publication_types
     - block_content.type.publication_years
     - block_content.type.rss_feed
+    - block_content.type.section_navigation
+    - block_content.type.slider
     - block_content.type.slideshow
     - block_content.type.tabs
     - block_content.type.taxonomy
     - block_content.type.twitter_feed
+    - block_content.type.views
     - field.storage.block_content.field_widget_collection
   module:
     - os_widgets
@@ -41,10 +50,16 @@ settings:
       accordion: accordion
       addthis: addthis
       basic: basic
+      column: column
       custom_text_html: custom_text_html
+      dataverse_dataset: dataverse_dataset
+      dataverse_dataset_citation: dataverse_dataset_citation
+      dataverse_list: dataverse_list
+      dataverse_search_box: dataverse_search_box
       embed_media: embed_media
       featured_posts: featured_posts
       follow_me: follow_me
+      list_of_files: list_of_files
       list_of_posts: list_of_posts
       mailchimp_subscription: mailchimp_subscription
       media_gallery: media_gallery
@@ -52,10 +67,13 @@ settings:
       publication_types: publication_types
       publication_years: publication_years
       rss_feed: rss_feed
+      section_navigation: section_navigation
+      slider: slider
       slideshow: slideshow
       tabs: tabs
       taxonomy: taxonomy
       twitter_feed: twitter_feed
+      views: views
     sort:
       field: id
       direction: ASC
