Issue #12036, #12817 - Fix - Media browser issues (#13223)
* Issue #12036 - Ajax content angular fix plus multiple media browser issue

* Issue #12036 - Class form paragraph config

* Issue #12036 - Class form paragraph tests

* Issue #12036 - Tests

* Issue #12036 - Correction.

* Issue #12036 - Test failure fixes.

* Issue #12036 - Issue #13127 - Accesshelper issue

* Issue #12036 - Test failure fixes.

* Issue #12036 - Test Js fix.

* Issue #12036 - Probable test fix.

* Issue #12036 - Tests changes and a probable fix.

* Issue #12036 - Removing unwanted change.

* Issue #12036 - Remove unwanted redeclaration.

* Issue #12036 - Removed a test that wont pass in travis.

Co-authored-by: uttkarsh@axelerant.com <uttkarsh@axelerant.com>
Co-authored-by: Lomas Rishi Gupta <lomasgupta35@gmail.com>

--- a/config/sync/core.entity_form_display.paragraph.class_material.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.class_material.default.yml
@@ -10,6 +10,7 @@ dependencies:
   module:
     - field_layout
     - layout_discovery
+    - os_media
     - text
 third_party_settings:
   field_layout:
@@ -23,13 +24,9 @@ mode: default
 content:
   field_attached_files:
     weight: 2
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-      match_limit: 10
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: media_browser_widget
     region: content
   field_body:
     weight: 1
